--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 __pycache__/
  *.pyc
-*.code-workspace
 .vscode
 /node_modules
 nohup.out
@@ -8,3 +7,4 @@ ed5_back/env_variables.py
 .scannerwork
 err.log
 stdout.log
+venv
